--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
-        run: npx playwright test specs/login.test.js --reporter=html --project=chromium
+        run: npx playwright test module4/specs/login.test.js --reporter=html --project=chromium
       - name: Upload HTML report
         uses: actions/upload-artifact@v4
         if: always()
