--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,7 +25,9 @@ jobs:
       - name: Install allure commandline
         run: npm install -g allure-commandline
       - name: Run Playwright tests
-        run: npx playwright test module4/specs/module4.test.js --reporter=html --project=chromium
+        run: npx playwright test module4/specs/module4.test.js --project=chromium
+      - name: Generate Allure Report
+        run: npx allure generate allure-results --clean -o allure-report
       - name: Upload HTML report
         uses: actions/upload-artifact@v4
         if: always()
