--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install allure commandline
         run: npm install -g allure-commandline
       - name: Run Playwright tests
-        run: npx playwright test module4/specs/module4.test.js --project=chromium
+        run: npx playwright test module4/specs/module4.test.js --project=chromium --reporter=allure-playwright
       - name: Generate Allure Report
         run: npx allure generate allure-results --clean -o allure-report
       - name: Upload HTML report
