--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install allure commandline
         run: npm install -g allure-commandline
       - name: Run Playwright tests
-        run: npx playwright test module4/specs/module4.test.js --project=chromium --reporter=allure-playwright
+        run: npx playwright test module4/specs/module4.test.js --project=chromium --reporter=allure-playwright,html
       - name: Generate Allure Report
         run: npx allure generate allure-results --clean -o allure-report
       - name: Upload HTML report
@@ -41,4 +41,11 @@ jobs:
         with:
           name: test-results
           path: test-results/
+
+      - name: Upload Allure report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: allure-report
+          path: allure-report/
           retention-days: 7
