--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,6 +4,7 @@ on:
     branches: [main, develop]
   pull_request:
     branches: [main]
+
 jobs:
   playwright-tests:
     timeout-minutes: 60
@@ -11,23 +12,32 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
           cache: 'npm'
+
       - name: Install dependencies
         run: npm ci
+
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
+
       - name: Install Allure CLI
         run: npm install allure-playwright --save-dev
+
       - name: Install allure commandline
         run: npm install -g allure-commandline
+
       - name: Run Playwright tests
         run: npx playwright test module4/specs/module4.test.js --project=chromium --reporter=allure-playwright,html
+
       - name: Generate Allure Report
         run: npx allure generate allure-results --clean -o allure-report
+
+      # Upload artifacts (optional but keeps them for history)
       - name: Upload HTML report
         uses: actions/upload-artifact@v4
         if: always()
@@ -35,12 +45,6 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
-      - name: Upload test results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: test-results
-          path: test-results/
 
       - name: Upload Allure report
         uses: actions/upload-artifact@v4
@@ -49,3 +53,24 @@ jobs:
           name: allure-report
           path: allure-report/
           retention-days: 7
+
+  # 🔥 New job: Deploy allure-report to GitHub Pages
+  deploy-allure:
+    needs: playwright-tests
+    runs-on: ubuntu-latest
+    if: always() # ensures it runs even if tests fail
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Download Allure report artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: allure-report
+          path: ./allure-report
+
+      - name: Deploy report to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./allure-report
