--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm install -g allure-commandline
 
       - name: Run Playwright tests
-        run: npx playwright test module4/specs/module4.test.js --project=chromium --reporter=allure-playwright,html
+        run: npx playwright test module4/specs/ --project=chromium --reporter=allure-playwright,html
 
       - name: Generate Allure Report
         run: npx allure generate allure-results --clean -o allure-report
